# QtModelUtilities

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.markdown  INSTALL.md  ModelUtilities.sln  README Insert Proxy Model.markdown  README Model Serialisation.markdown  README Role Mask Proxy Model.markdown  README Root Index Proxy Model.markdown  README Transpose Proxy Model.markdown  README.markdown  README.md  README.md.orig  READMEGenericModel.md  READMEInsertProxyModel.markdown  READMEInsertProxyModel.md  READMEModelSerialisation.md  READMERoleMaskProxyModel.md  READMERootIndexProxyModel.md  abstractmodelserialiser_8h_source.html  abstractmultiroleserialiser_8h_source.html  abstractsingleroleserialiser_8h_source.html  abstractstringserialiser_8h_source.html  annotated.html  binarymodelserialiser_8h_source.html  class_abstract_model_serialiser-members.html  class_abstract_model_serialiser.html  class_abstract_multi_role_serialiser-members.html  class_abstract_multi_role_serialiser.html  class_abstract_single_role_serialiser-members.html  class_abstract_single_role_serialiser.html  class_abstract_string_serialiser-members.html  class_abstract_string_serialiser.html  class_binary_model_serialiser-members.html  class_binary_model_serialiser.html  class_csv_model_serialiser-members.html  (+127 more)
Docs/: DoxygenConfig.doxyfile
Examples/: Model Serialisation.cpp
demo/: CMakeLists.txt  demohierarchylevelproxymodel.cpp  demohierarchylevelproxymodel.h  demohierarchylevelproxymodel.ui  demorootindexproxymodel.cpp  demorootindexproxymodel.h  demorootindexproxymodel.ui  demowidget.cpp  demowidget.h  demowidget.ui  main.cpp  roleseditdialog.cpp  roleseditdialog.h  roleseditdialog.ui  templatedemoview.h
examples/: CMakeLists.txt
examples/exam_GenericModel/: CMakeLists.txt  exam_genericmodel.cpp
examples/exam_HierarchyLevelProxyModel/: CMakeLists.txt  exam_hierarchylevelproxymodel.cpp
examples/exam_InsertProxyModel/: CMakeLists.txt  exam_inserproxycommit.cpp  exam_inserproxysubclass.cpp  exam_insertsqltable.cpp
examples/exam_ModelSerialisation/: CMakeLists.txt  exam_modelserialisation.cpp
examples/exam_RoleMaskProxyModel/: CMakeLists.txt  dbresource.qrc  exam_checkablefilesystemmodel.cpp  exam_rolemaskeditablesql.cpp  exam_rolemaskhighlight.cpp  exampledb.sqlite3
examples/exam_RootIndexProxyModel/: CMakeLists.txt  exam_rootindexproxy.cpp
examples/exem_InsertProxyModel/: CMakeLists.txt  exem_inserproxycommit.cpp  exem_inserproxysubclass.cpp
examples/exem_ModelSerialisation/: CMakeLists.txt  exem_modelserialisation.cpp
examples/exem_RoleMaskProxyModel/: CMakeLists.txt  exem_rolemaskeditablesql.cpp
examples/exem_TransposeProxyModel/: CMakeLists.txt  exem_transposeproxymodel.cpp
src/: CMakeLists.txt  ModelUtilities.vcxproj  ModelUtilities.vcxproj.filters  QtModelUtilitiesConfig.cmake  abstractmodelserialiser.cpp  abstractmodelserialiser.h  abstractmultiroleserialiser.cpp  abstractmultiroleserialiser.h  abstractsingleroleserialiser.cpp  abstractsingleroleserialiser.h  abstractstringserialiser.cpp  abstractstringserialiser.h  binarymodelserialiser.cpp  binarymodelserialiser.h  columnstorolesproxymodel.cpp  columnstorolesproxymodel.h  csvmodelserialiser.cpp  csvmodelserialiser.h  genericmodel.cpp  genericmodel.h  hierarchylevelproxymodel.cpp  hierarchylevelproxymodel.h  htmlmodelserialiser.cpp  htmlmodelserialiser.h  insertproxymodel.cpp  insertproxymodel.h  jsonmodelserialiser.cpp  jsonmodelserialiser.h  modelutilities_global.h  rolemaskproxymodel.cpp  rolemaskproxymodel.h  rootindexproxymodel.cpp  rootindexproxymodel.h  transposeproxymodel.cpp  transposeproxymodel.h  treemapproxymodel.cpp  treemapproxymodel.h  xmlmodelserialiser.cpp  xmlmodelserialiser.h
src/includes/: BinaryModelSerialiser  ColumnsToRolesProxyModel  CsvModelSerialiser  GenericModel  HierarchyLevelProxyModel  HtmlModelSerialiser  InsertProxyModel  RoleMaskProxyModel  RootIndexProxyModel  TransposeProxyModel
src/private/: abstractmodelserialiser_p.h  abstractmultiroleserialiser_p.h  abstractsingleroleserialiser_p.h  abstractstringserialiser_p.h  binarymodelserialiser_p.h  columnstorolesproxymodel_p.h  csvmodelserialiser_p.h  genericmodel_p.h  hierarchylevelproxymodel_p.h  htmlmodelserialiser_p.h  insertproxymodel_p.h  jsonmodelserialiser_p.h  modelutilities_common_p.h  rolemaskproxymodel_p.h  rootindexproxymodel_p.h  transposeproxymodel_p.h  treemapproxymodel_p.h  xmlmodelserialiser_p.h
tests/: CMakeLists.txt  modeltestmanager.cpp  modeltestmanager.h  serialisers_common.hpp
tests/tst_BinaryModelSerialiser/: CMakeLists.txt  main.cpp  tst_binarymodelserialiser.cpp  tst_binarymodelserialiser.h
tests/tst_CsvModelSerialiser/: CMakeLists.txt  main.cpp  tst_csvmodelserialiser.cpp  tst_csvmodelserialiser.h
tests/tst_GenericModel/: CMakeLists.txt  main.cpp  tst_genericmodel.cpp  tst_genericmodel.h
tests/tst_HierarchyLevelProxyModel/: CMakeLists.txt  main.cpp  tst_hierarchylevelproxymodel.cpp  tst_hierarchylevelproxymodel.h
tests/tst_HtmlModelSerialiser/: CMakeLists.txt  main.cpp  tst_htmlmodelserialiser.cpp  tst_htmlmodelserialiser.h
tests/tst_InsertProxyModel/: CMakeLists.txt  main.cpp  tst_InsertProxyModel.txt  tst_InsertProxyModel.vcxproj  tst_InsertProxyModel.vcxproj.filters  tst_insertproxymodel.cpp  tst_insertproxymodel.h
tests/tst_JsonModelSerialiser/: CMakeLists.txt  main.cpp  tst_jsonmodelserialiser.cpp  tst_jsonmodelserialiser.h
tests/tst_RoleMaskProxyModel/: CMakeLists.txt  tst_RoleMaskProxyModel.vcxproj  tst_RoleMaskProxyModel.vcxproj.filters  tst_rolemaskproxymodel.cpp  tst_rolemaskproxymodel.h
tests/tst_RootIndexProxyModel/: CMakeLists.txt  main.cpp  tst_rootindexproxymodel.cpp  tst_rootindexproxymodel.h
tests/tst_SerialisersCommon/: tst_serialiserscommon.cpp  tst_serialiserscommon.h
tests/tst_TransposeProxyModel/: CMakeLists.txt  main.cpp  tst_InvertRowColProxyModel.txt  tst_transposeproxymodel.cpp  tst_transposeproxymodel.h
tests/tst_XmlModelSerialiser/: CMakeLists.txt  main.cpp  tst_xmlmodelserialiser.cpp  tst_xmlmodelserialiser.h
(+122 files in other folders)
