if(BUILD_MODELSERIALISATION)
    add_subdirectory(exam_ModelSerialisation)
endif()
if(BUILD_INSERTPROXY)
    add_subdirectory(exam_InsertProxyModel)
endif()
if(BUILD_ROLEMASKPROXY)
    add_subdirectory(exam_RoleMaskProxyModel)
endif()
if(BUILD_ROOTINDEXPROXY)
    add_subdirectory(exam_RootIndexProxyModel)
endif()
