if(BUILD_ROLEMASKPROXY)
    add_subdirectory(tst_RoleMaskProxyModel)
endif()
if(BUILD_INSERTPROXY)
    add_subdirectory(tst_InsertProxyModel)
endif()
if(BUILD_MODELSERIALISATION)
    add_subdirectory(tst_BinaryModelSerialiser)
    add_subdirectory(tst_CsvModelSerialiser)
    add_subdirectory(tst_HtmlModelSerialiser)
    add_subdirectory(tst_JsonModelSerialiser)
    add_subdirectory(tst_XmlModelSerialiser)
endif()
